--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-streamlit
-pandas
-plotly
-scikit-learn
-openai
-cohere
-transformers
-replicate
-matplotlib
-scipy
-numpy
-psutil
-openpyxl
-requests
+streamlit>=1.28.0
+pandas>=2.0.0
+plotly>=5.15.0
+scikit-learn>=1.3.0
+openai>=0.27.0
+cohere>=4.0.0
+transformers>=4.30.0
+replicate>=0.8.0
+matplotlib>=3.7.0
+scipy>=1.10.0
+numpy>=1.24.0
+psutil>=5.9.0
+openpyxl>=3.1.0
+requests>=2.28.0
